syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

// protoc -I=. --grpc_out=. --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` helloworld.proto
// protoc -I=. --cpp_out=. helloworld.proto
// protoc --cpp_out=. --grpc_out=. --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` ./src/server_reg/calculator.proto
// protoc -I=./src/server_reg --cpp_out=./src/server_reg --grpc_out=./src/server_reg --plugin=protoc-gen-grpc=`which grpc_cpp_plugin`
// protoc --cpp_out=. --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` ./src/server_reg/server_reg.proto

